# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: myci.yml
task_manager/: settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
task_manager/fixtures/: labels.yaml  statuses.yaml  tasks.yaml  users.yaml
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_options.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/task_manager/templates/: index.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_options.py
task_manager/templates/: home.html  index.html
task_manager/templates/labels/: create_label.html  delete_label.html  list_of_all_labels.html  update_label.html
task_manager/templates/statuses/: create_status.html  delete_status.html  list_of_all_statuses.html  update_status.html
task_manager/templates/tasks/: create_task.html  delete_task.html  list_of_all_tasks.html  update_task.html  view_task.html
task_manager/templates/users/: delete_user.html  login.html  registration.html  update_user.html  users_list.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
