[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = ["Aleksandr <nastyavin86@br.ru>"]
readme = "README.md"
packages = [
  {include = "task_manager"}
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
dj-database-url = "^0.5.0"
whitenoise = "^6.2.0"
django-heroku = "^0.3.1"
django-bootstrap4 = "^22.2"
psycopg2 = "^2.9.4"
psycopg2-binary = "^2.9.4"
django-filter = "^22.1"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
PyYAML = "^6.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
